--- a/index.html
+++ b/index.html
@@ -17,8 +17,38 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>OneBitX - Home</title>
 </head>
-<body>
+<body style="background-color: black;">
     
+    <div class="container-fluid container00 container01">
+        <div class="container">
+            <header class="header">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-transparent pt-4">
+                    <div class="container-fluid">
+                        <a href="/index.html">
+                            <img src="./images/logo-obc-2021-darkbg.png" alt="Logo OBCX" class="logoPc img-fluid" style="width: 250px;">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                            <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/falcon9.html">FALCON 9</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link active" href="/humamFlight.html">HUMAN SPACE FLIGHT</a>
+                            </li></ul>
+                        </div>
+                    </div>
+                </nav>
+            </header>
+        </div>
+    </div>
+
+
+
+
+
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
