Commit add container titlePadding

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>OneBitX - Home</title>
 </head>
-<body style="background-color: black;">
+<body class="bg-dark">
     
     <div class="container-fluid container00 container01">
         <div class="container">
@@ -42,6 +42,17 @@
                     </div>
                 </nav>
             </header>
+        </div>
+        <div class="container titlePadding">
+            <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
+            <p class="h1">MISSÃO EQUIPE-3</p>
+            <button class="btn btn-outline-light mt-5">SAIBA MAIS</button>
+
+            <div class="container text-center">
+                <a href="#">
+                    <img src="./images/home/arrowDown.gif" alt="arrowDown">
+                </a>
+            </div>
         </div>
     </div>
 
