--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
         </div>
     </div>
 
+    <footer class="container-fluid footer">
+        <span class="me-4 copyOBC">OneBitCode &copy;2022 </span>  
+       <a href="/" target="_blank">Instagram</a>
+       <a href="/" target="_blank">Youtube</a>
+       <a href="/" target="_blank">Twitter</a>
+    </footer>
 
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
