Commit style header

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="container text-center">
                 <a href="#">
-                    <img src="./images/home/arrowDown.gif" alt="arrowDown">
+                    <img src="./images/home/arrowDown.gif" alt="arrowDown" class="arrowDown">
                 </a>
             </div>
         </div>
