--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent pt-4">
                     <div class="container-fluid">
                         <a href="/index.html">
-                            <img src="./images/logo-obc-2021-darkbg.png" alt="Logo OBCX" class="logoPc img-fluid" style="width: 250px;">
+                            <img src="./images/logo-obc-2021-darkbg.png" alt="Logo OBCX" class="logoPc img-fluid">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
