--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>OneBitX - Home</title>
 </head>
-<body class="bg-danger">
+<body>
     
     <div class="container-fluid container00 container01">
         <div class="container">
