--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container titlePadding">
             <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
             <p class="h1">MISSÃO EQUIPE-3</p>
-            <button class="btn btn-outline-light mt-5">SAIBA MAIS</button>
+            <button class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
 
             <div class="container text-center">
                 <a href="#">
@@ -60,7 +60,7 @@
         <div class="container titlePadding">
             <p class="h5" id="launchComing">MISSÃO CONCLUIDA</p>
             <p class="h1 shortTitle">MISSÃO EQUIPE-2 RETORNOU PARA A TERRA</p>
-            <button class="btn btn-outline-light mt-5">SAIBA MAIS</button>
+            <button class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
         </div>
     </div>
     
@@ -68,19 +68,19 @@
         <div class="container titlePadding">
             <p class="h5" id="launchComing">MISSÃO CONCLUIDA</p>
             <p class="h1 shortTitle">DRAGON RETORNOU PARA A TERRA</p>
-            <button class="btn btn-outline-light mt-5">SAIBA MAIS</button>
+            <button class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
         </div>
     </div>
     
     <div class="container-fluid container00 container04">
         <div class="container titlePadding">
             <p class="h1 mediumTitle">STARSHIP POUSA ASTRONAUTAS DA NASA NA LUA</p>
-            <button class="btn btn-outline-light mt-5">SAIBA MAIS</button>
+            <button class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
         </div>
     </div>
 
     <footer class="container-fluid footer">
-        <span class="me-4 copyOBC">OneBitCode &copy;2022 </span>  
+       <span class="me-4 copyOBC">OneBitCode &copy;2022</span>  
        <a href="/" target="_blank">Instagram</a>
        <a href="/" target="_blank">Youtube</a>
        <a href="/" target="_blank">Twitter</a>
