--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
     <footer class="container-fluid footer">
        <span class="me-4 copyOBC">OneBitCode &copy;2022</span>  
-       <a href="/" target="_blank">Instagram</a>
-       <a href="/" target="_blank">Youtube</a>
+       <a href="/" target="_blank" class="me-4">Instagram</a>
+       <a href="/" target="_blank" class="me-4">Youtube</a>
        <a href="/" target="_blank">Twitter</a>
     </footer>
 
