--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
         </div>
         <div class="container titlePadding">
             <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
-            <p class="h1">MISSÃO EQUIPE-3</p>
+            <p class="h1 mediumTitle">MISSÃO EQUIPE-3</p>
             <button class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
 
             <div class="container text-center">
-                <a href="#">
+                <a href="#container02">
                     <img src="./images/home/arrowDown.gif" alt="arrowDown" class="arrowDown">
                 </a>
             </div>
         </div>
     </div>
     
-    <div class="container-fluid container00 container02">
+    <div class="container-fluid container00 container02" id="container02">
         <div class="container titlePadding">
             <p class="h5" id="launchComing">MISSÃO CONCLUIDA</p>
             <p class="h1 shortTitle">MISSÃO EQUIPE-2 RETORNOU PARA A TERRA</p>
